--- a/index.html
+++ b/index.html
@@ -34,15 +34,10 @@
       width="220" height="220">
       <p> <u> <h3>Andrew Ngo</h3> </u> </p> 
         <p>
-        Hello my name is this is also a test, 
-        I like to try good food and watch good shows
-        Blackwater, which is now known as Academi, is a private military company that provides security 
-        and military services to clients around the world. Whether or not Blackwater, or Academi, is "good" is a matter of 
-        perspective and can depend on various 
-        factors such as the specific situation in which they are operating, the nature of their work, and the opinions 
-        of the people who are affected by their actions.
+        My name is Andrew Ngo and I am a Junior majoring in Computer Science. I have experience with Java, Python. But I plan on learning 
+        more languages to become more of a versitile programmer.
         </p>
-      </p>
+      
 
 
 
@@ -57,7 +52,7 @@
         <img style = "border:10px solid black;"src="https://i.imgur.com/2by3VYI.jpg" alt="Image 3" width="220" height="220">
         <p> <u> <h3> Nisarg Shah</h3> </u> </p>
         <p>
-        My name is Nisarg Shah and I am a Senior  Computer Science major. 
+        My name is Nisarg Shah and I am a Senior Computer Science major. 
         I hope to learn Concepts from this class and improve my skills in coding.
         </p>
       <br>
@@ -70,8 +65,9 @@
       PDF FOR LATEX BEAMER PRESENTATION PDF
     -->
     <center>
+      <p> <u> <h2>  Latex Beamer Presentation</h2> </u> </p>
       <embed src="https://docs.google.com/presentation/d/178YF-olOof9nUf-C0KBZt-XnAnNh4UQ9ArDoyPYk3WY/edit?usp=sharing" 
-      type="application/pdf" width="60%" height="400px" />
+      type="application/pdf" width="60%" height="400px">
     </center>
   </body>
 
@@ -107,6 +103,27 @@
                   &lt;p&gt;
                   Test TEST
                   &lt;/p&gt;
+                &lt;img style="border:10px solid black;" src="https://i.imgur.com/sKV54PO.jpg" alt="Image 2" width="120" height="120"&gt;
+                &lt;p&gt;&lt;u&gt;&lt;h3&gt; Marcus Fredericks &lt;/h3&gt;&lt;/u&gt;&lt;/p&gt;
+                  &lt;p&gt;
+                  Test TEST
+                  &lt;/p&gt;
+                &lt;img style="border:10px solid black;" src="https://i.imgur.com/2by3VYI.jpg"" alt="Image 3 " width="120" height="120"&gt;
+                &lt;p&gt;&lt;u&gt;&lt;h3&gt; Nisarg Shah &lt;/h3&gt;&lt;/u&gt;&lt;/p&gt;
+                  &lt;p&gt;
+                    Test TEST
+                  &lt;/p&gt;
+                  &lt;br&gt;
+              &lt;/center&gt;
+
+              &lt;!--
+                  PDF FOR LATEX Presentation-- &gt;
+              &lt;center&gt;
+                &lt;p&gt; &lt;u&gt; &lt;h2&gt;  Latex Beamer Presentation &lt;/h2&gt; &lt;/u&gt; &lt;/p&gt;
+                &lt;embed src="https://docs.google.com/presentation/d/178YF-olOof9nUf-C0KBZt-XnAnNh4UQ9ArDoyPYk3WY/edit?usp=sharing" 
+                type="application/pdf" width="60%" height="400px"&gt;
+              &lt;/center&gt;
+            &lt;/body&gt;
 
   
         </code>
@@ -114,12 +131,6 @@
   </body>
   
   <address>
-   <center> ango@nyit.edu , mfrede06@nyit.edu </center> 
+   <center> ango@nyit.edu , mfrede06@nyit.edu, nshah81@nyit.edu </center> 
   </address>
-
-
-
-
-
-  
 </html>
