--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     -->
     <center>
       <p> <u> <h2>  Latex Beamer Presentation</h2> </u> </p>
-      <embed src="https://docs.google.com/presentation/d/178YF-olOof9nUf-C0KBZt-XnAnNh4UQ9ArDoyPYk3WY/edit?usp=sharing" 
+      <embed src="https://drive.google.com/file/d/1773NOhZetnVa82up3yPR28dkecbe30Yh/preview"
       type="application/pdf" width="60%" height="400px">
     </center>
   </body>
