--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
         more languages to become more of a versitile programmer.
         </p>
       
-
-
-
         <img style = "border:10px solid black;" src="https://i.imgur.com/sKV54PO.jpg" alt="Image 2" width="220" height=" 220">
         <p> <u> <h3>Marcus Fredericks</h3> </u> </p>
         <p>
@@ -69,19 +66,20 @@
       <embed src="https://drive.google.com/file/d/1773NOhZetnVa82up3yPR28dkecbe30Yh/preview"
       type="application/pdf" width="60%" height="400px">
     </center>
+
+
+    <center>
+      <p> <u> <h1> Latex Beamer Presentation Source Code</h1></u></p>
+      <iframe src="https://drive.google.com/file/d/1UnBgKHG5Svnyn0_LKtyo4-oxFTcl8TFi/preview" width="640" height="480" 
+      allow="autoplay"></iframe>
+    </center>
+
   </body>
 
-  <center>
-    <p> <u> <h1> Latex Beamer Presentation Source Code</h1></u></p>
-    <iframe src="https://drive.google.com/file/d/1UnBgKHG5Svnyn0_LKtyo4-oxFTcl8TFi/preview" width="640" height="480" allow="autoplay"></iframe>
-  </center>
+  
 
 
   <!-- SOURCE CODE TEST -->
-  <body>  
-    <h2> <u> Source Code of Latex Beamer Presentation</u></h2>
-    
-  </body>
   <body>
     <h2><u>Source Code of WebPage</u></h2>
     <pre>
@@ -110,17 +108,20 @@
                 &lt;img style="border:10px solid black;" src="https://i.imgur.com/ZoB7IHp.jpg" alt="Test Image" width="120" height="120"&gt;
                 &lt;p&gt;&lt;u&gt;&lt;h3&gt; Andrew Ngo &lt;/h3&gt;&lt;/u&gt;&lt;/p&gt;
                   &lt;p&gt;
-                  Test TEST
+                  My name is Andrew Ngo and I am a Junior majoring in Computer Science. I have experience with Java, Python. But I plan on learning 
+                  more languages to become more of a versitile programmer.
                   &lt;/p&gt;
                 &lt;img style="border:10px solid black;" src="https://i.imgur.com/sKV54PO.jpg" alt="Image 2" width="120" height="120"&gt;
                 &lt;p&gt;&lt;u&gt;&lt;h3&gt; Marcus Fredericks &lt;/h3&gt;&lt;/u&gt;&lt;/p&gt;
                   &lt;p&gt;
-                  Test TEST
+                  My name is Marcus Fredericks and I am a sophomore Computer Science major. 
+                  My hope is that this course will help broaden my knowledge and skill as a programmer.
                   &lt;/p&gt;
                 &lt;img style="border:10px solid black;" src="https://i.imgur.com/2by3VYI.jpg"" alt="Image 3 " width="120" height="120"&gt;
                 &lt;p&gt;&lt;u&gt;&lt;h3&gt; Nisarg Shah &lt;/h3&gt;&lt;/u&gt;&lt;/p&gt;
                   &lt;p&gt;
-                    Test TEST
+                  My name is Nisarg Shah and I am a Senior Computer Science major. 
+                  I hope to learn Concepts from this class and improve my skills in coding.
                   &lt;/p&gt;
                   &lt;br&gt;
               &lt;/center&gt;
@@ -129,12 +130,17 @@
                   PDF FOR LATEX Presentation-- &gt;
               &lt;center&gt;
                 &lt;p&gt; &lt;u&gt; &lt;h2&gt;  Latex Beamer Presentation &lt;/h2&gt; &lt;/u&gt; &lt;/p&gt;
-                &lt;embed src="https://docs.google.com/presentation/d/178YF-olOof9nUf-C0KBZt-XnAnNh4UQ9ArDoyPYk3WY/edit?usp=sharing" 
+                &lt;embed src="https://drive.google.com/file/d/1773NOhZetnVa82up3yPR28dkecbe30Yh/preview" 
                 type="application/pdf" width="60%" height="400px"&gt;
               &lt;/center&gt;
-            &lt;/body&gt;
 
-  
+              &lt;center&gt;
+                &lt;p&gt; &lt;u&gt; &lt;h2&gt;  Latex Beamer Presentation Source Code &lt;/h2&gt; &lt;/u&gt; &lt;/p&gt;
+                &lt;iframe src="https://drive.google.com/file/d/1773NOhZetnVa82up3yPR28dkecbe30Yh/preview" 
+                width="60%" height="400px" allow="autoplay"&gt;&lt;/iframe&gt;
+              &lt;/center&gt;
+
+            &lt;/body&gt;
         </code>
     </pre>
   </body>
